--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/katlego.kingsley.lefenya/viz/AirBnBProject_16871134300050/Dashboard1" class="image fit"><img src="images/airbnb categories1.jfif" alt="" /></a>
-									<p>I visualize data from Airbnb directory using tableau</p>
+									<p>Visualize data from Airbnb directory using tableau</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/katlego.kingsley.lefenya/viz/AirBnBProject_16871134300050/Dashboard1" class="button">View Project</a></li>
 									</ul>
@@ -95,7 +95,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/KatlegoLefenya/PortfolioProjects/blob/main/Bike%20Sales.xlsx" class="image fit"><img src="images/Bike Sales.PNG" alt="" /></a>
-									<p>In this project I created a dashboard to analyse bike sales using Excel. I use varius matrices to evaluate what factor influece the purchase of a bike. </p>
+									<p>Created a dashboard to analyse bike sales using Excel. Used various matrices to evaluate who are the most likely to purchase a bike. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KatlegoLefenya/PortfolioProjects/blob/main/Bike%20Sales.xlsx" class="button">View Project</a></li>
 									</ul>
@@ -107,7 +107,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/KatlegoLefenya/-Realtime-Sales-Simulation-using-SQL-Server-and-Direct-Query" class="image fit"><img src="images/Realtime Sales Simulation Project.PNG" alt="" /></a>
-									<p>I simulate sales data using SQL server then link it to a PowerBI dashboard which continues to update as the sales activity is recorded.</p>
+									<p>Simulate sales data using SQL server then link it to a PowerBI dashboard which continues to update as the sales activity is recorded.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KatlegoLefenya/-Realtime-Sales-Simulation-using-SQL-Server-and-Direct-Query" class="button">View Project</a></li>
 									</ul>
@@ -119,7 +119,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/KatlegoLefenya/Realtime-Call-Center-Performance-Simulation" class="image fit"><img src="images/Realtime Call Center Performance Simulation.PNG" alt="" /></a>
-									<p>I simulate calls in a call center using python and link it to SQL server then to PowerBI to display a dashboard. The dashboard produces insights of call time, response time, call rating and complaints status to give an overview of the productivity of the call center.</p>
+									<p>Simulate calls in a call center using python and link it to SQL server then to PowerBI to display a dashboard. The dashboard produces insights of call time, response time, call rating and complaints status to give an overview of the productivity of the call center.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KatlegoLefenya/Realtime-Call-Center-Performance-Simulation" class="button">View Project</a></li>
 									</ul>
