--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/KatlegoLefenya/PortfolioProjects/blob/main/Bike%20Sales.xlsx" class="image fit"><img src="images/Bike Sales.PNG" alt="" /></a>
-									<p>Created a dashboard to analyse bike sales using Excel. Used various matrices to evaluate who are the most likely to purchase a bike. </p>
+									<p>Created a dashboard to analyse bike sales using Excel. Segmented the customers by their attributes to see where revenue is generated. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KatlegoLefenya/PortfolioProjects/blob/main/Bike%20Sales.xlsx" class="button">View Project</a></li>
 									</ul>
