--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/KatlegoLefenya/Realtime-Call-Center-Performance-Simulation/blob/main/Realtime%20Call%20Center%20Performance%20Simulation%20using%20Python%2C%20SQL%20and%20Power%20BI.pdf">Realtime Call Center Performace Project<br />
+										<h2><a href="https://github.com/KatlegoLefenya/Realtime-Call-Center-Performance-Simulation/blob/main/Realtime%20Call%20Center%20Performance%20Simulation%20using%20Python%2C%20SQL%20and%20Power%20BI.pdf">Realtime Call Center Performance Project<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/KatlegoLefenya/Realtime-Call-Center-Performance-Simulation/blob/main/Realtime%20Call%20Center%20Performance%20Simulation%20using%20Python%2C%20SQL%20and%20Power%20BI.pdf" class="image fit"><img src="images/call center1.jfif" alt="" /></a>
